Added complex enter key functions and added stripping spaces from answer

--- a/src/components/Submission/Submission.css
+++ b/src/components/Submission/Submission.css
@@ -8,4 +8,12 @@
     .answer-text {
         font-size: 2rem;
     }
-} 
+}
+
+.spaced-button-col {
+    margin: 5px;
+}
+
+.spaced-button-col button {
+    font-size: larger;
+}
