Added scoreboard features and nav to accomodate more game modes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,4 +27,8 @@
         font-size: 275%;
         color: white
     }
-} 
+}
+
+nav a#nav-selected {
+    text-decoration: underline dashed white;
+}
